# pybiomech

./: .gitignore  hello.py  pyproject.toml  tests.ipynb
src/pybiomech/: featherstone.py
src/pybiomech/experiment/: invitro.py
src/pybiomech/experiment/utils/: breakpoint.py
src/pybiomech/physics/: __init__.py  coordinates.py  featherstone.py  frame.py  spatial.py
src/pybiomech/utils/: math_utils.py
src/pybiomech/viz/: __init__.py  animations.py  camera.py  constants.py  scene.py
tests/: __init__.py
tests/experiment/: test_invitro.py
tests/experiment/utils/: test_breakpoint.py
tests/physics/: test_coordinates.py  test_frame.py  test_spatial.py
tests/utils/: test_math_utils.py
version1/: main.py
version1/biomech/: __init__.py  model.py
version1/gfx/: __init__.py  gui.py
version1/utilities/: __init__.py
